# llm-client

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: basic.rs  custom_client.rs  llama_cpp.rs  multi_provider.rs  streaming.rs  streaming_hf.rs  tool_use.rs
src/: client.rs  error.rs  lib.rs  mock.rs  streaming.rs  types.rs
src/providers/: claude.rs  gemini.rs  hf.rs  llama_cpp.rs  mod.rs  ollama.rs  openai.rs  openai_compat.rs  tests.rs
tests/: live_query.rs
