[package]
name = "llmeh"
version = "0.0.1"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
authors = ["Assaf Vayner <assafvayner@gmail.com>"]
repository = "https://github.com/assafvayner/llmeh"
description = "A provider-agnostic LLM client abstraction with implementations for Hugging Face, Claude, OpenAI, Gemini, Ollama etc."
keywords = ["llm", "ai", "openai", "anthropic", "client"]
categories = ["api-bindings"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["claude", "openai", "gemini", "ollama", "hf", "llama-cpp", "openai-compat"]
claude = []
openai = ["openai-compat"]
gemini = ["openai-compat"]
hf = ["openai-compat"]
llama-cpp = ["openai-compat"]
ollama = []
openai-compat = []
mock = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
